# near

./: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: checks.yml
app/: .black
app/app/: settings.py
app/core/migrations/: 0001_initial.py
