[tool.poetry]
name = "near"
version = "0.1.0"
description = ""
authors = ["Youngjin Jo <yjinjo@berkeley.edu>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
Django = "^4.2"
black = "^23.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
